--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="l-page">
       <div id="pageHeader" class="l-pageHeader">
         <div class="l-container">
-          <div class="box">
+          <div class="u-inner--tablet">
             <h1>page title</h1>
             <p>html boilerplate base.</p>
           </div>
@@ -20,7 +20,7 @@
       </div>
       <div class="l-pageContent">
         <div class="l-container">
-          <div class="box">
+          <div class="u-inner--tablet">
             <div class="l-row">
               <div class="l-col3">
                 <h2>dropdown</h2>
@@ -50,7 +50,7 @@
           </div>
         </div>
         <div class="l-container">
-          <div class="box">
+          <div class="u-inner--tablet">
             <div class="l-row">
               <div class="l-col3">
                 <h2>tab</h2>
@@ -126,7 +126,7 @@
               </div>
             </div>
           </div>
-          <div class="box">
+          <div class="u-inner--tablet">
             <div class="l-row">
               <div class="l-col3">
                 <h2>accordion</h2>
@@ -163,7 +163,7 @@
               </div>
             </div>
           </div>
-          <div class="box">
+          <div class="u-inner--tablet">
             <div class="l-row">
               <div class="l-col3">
                 <h2>adjust height</h2>
@@ -207,7 +207,7 @@
               </div>
             </div>
           </div>
-          <div class="box">
+          <div class="u-inner--tablet">
             <div class="l-row">
               <div class="l-col3">
                 <h2>modal</h2>
