--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>anti base</title>
     <meta name="description" content="this site is anti base at top page">
     <meta name="keywords" content="">
-    <link rel="stylesheet" href="antibase.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="l-page">
@@ -21,11 +21,11 @@
       <div class="l-pageContent">
         <div class="l-container">
           <div class="u-inner--tablet">
-            <div class="l-row">
-              <div class="l-col3">
+            <div class="row">
+              <div class="col3">
                 <h2>dropdown</h2>
               </div>
-              <div class="l-col9">
+              <div class="col9">
                 <div class="dropDown">
                   <div class="dropDown__select">
                     <select name="drop">
@@ -51,11 +51,11 @@
         </div>
         <div class="l-container">
           <div class="u-inner--tablet">
-            <div class="l-row">
-              <div class="l-col3">
+            <div class="row">
+              <div class="col3">
                 <h2>tab</h2>
               </div>
-              <div class="l-col9">
+              <div class="col9">
                 <div class="tab js-tab">
                   <ul class="tab__head js-tab__head">
                     <li class="tab__item js-tab__item"><a href="#install" class="js-noAnchor">インストール</a></li>
@@ -127,11 +127,11 @@
             </div>
           </div>
           <div class="u-inner--tablet">
-            <div class="l-row">
-              <div class="l-col3">
+            <div class="row">
+              <div class="col3">
                 <h2>accordion</h2>
               </div>
-              <div class="l-col9">
+              <div class="col9">
                 <div class="accordion js-acd">
                   <div class="accordion__head js-acd__head">heading01</div>
                   <div class="accordion__body js-acd__body">
@@ -164,43 +164,43 @@
             </div>
           </div>
           <div class="u-inner--tablet">
-            <div class="l-row">
-              <div class="l-col3">
+            <div class="row">
+              <div class="col3">
                 <h2>adjust height</h2>
               </div>
-              <div class="l-col9">
+              <div class="col9">
                 <ul class="bang lists row">
-                  <li class="bang__item list l-col6">
+                  <li class="bang__item list col6">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Qui ita affectus, beatum esse numquam probabis; Multa sunt dicta ab antiquis de contemnendis ac despiciendis rebus humanis; Iam id ipsum absurdum, maximum malum neglegi. Duo Reges: constructio interrete. Quae similitudo in genere etiam humano apparet. Huius, Lyco, oratione locuples, rebus ipsis ielunior.</p>
                   </li>
-                  <li class="bang__item list l-col6">
+                  <li class="bang__item list col6">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Qui ita affectus,</p>
                   </li>
                 </ul>
                 <ul class="bang lists row">
-                  <li class="bang__item list l-col5">
+                  <li class="bang__item list col5">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Qui ita affectus, beatum esse numquam probabis; Multa sunt dicta ab antiquis de contemnendis ac despiciendis rebus humanis; Iam id ipsum absurdum, maximum malum neglegi. Duo Reges: constructio interrete. Quae similitudo in genere etiam humano apparet. Huius, Lyco, oratione locuples, rebus ipsis ielunior.</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Qui ita affectus, beatum esse numquam probabis; Multa sunt dicta ab antiquis de contemnendis ac despiciendis rebus humanis; Iam id ipsum absurdum, maximum malum neglegi. Duo Reges: constructio interrete. Quae similitudo in genere etiam humano apparet. Huius, Lyco, oratione locuples, rebus ipsis ielunior.</p>
                   </li>
-                  <li class="bang__item list l-col4">
+                  <li class="bang__item list col4">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Qui ita affectus, beatum esse numquam probabis; Multa sunt dicta ab antiquis de contemnendis ac despiciendis rebus humanis; Iam id ipsum absurdum, maximum malum neglegi. Duo Reges: constructio interrete. Quae similitudo in genere etiam humano apparet. Huius, Lyco, oratione locuples, rebus ipsis ielunior.</p>
                   </li>
-                  <li class="bang__item list l-col3">
+                  <li class="bang__item list col3">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Qui ita affectus, beatum esse numquam probabis; Multa sunt dicta ab antiquis de contemnendis ac despiciendis rebus humanis; Iam id ipsum absurdum, maximum malum neglegi. Duo Reges: constructio interrete. Quae similitudo in genere etiam humano apparet. Huius, Lyco, oratione locuples, rebus ipsis ielunior.</p>
                   </li>
                 </ul>
                 <ul class="bang lists row">
-                  <li class="bang__item list l-col6">
+                  <li class="bang__item list col6">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Qui ita affectus,</p>
                   </li>
-                  <li class="bang__item list l-col6">
+                  <li class="bang__item list col6">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Qui ita affectus,</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Qui ita affectus,</p>
                   </li>
-                  <li class="bang__item list l-col6">
+                  <li class="bang__item list col6">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Qui ita affectus,</p>
                   </li>
-                  <li class="bang__item list l-col6">
+                  <li class="bang__item list col6">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Qui ita affectus,</p>
                   </li>
                 </ul>
@@ -208,11 +208,11 @@
             </div>
           </div>
           <div class="u-inner--tablet">
-            <div class="l-row">
-              <div class="l-col3">
+            <div class="row">
+              <div class="col3">
                 <h2>modal</h2>
               </div>
-              <div class="l-col9">
+              <div class="col9">
                 <p>modal</p>
                 <p><a href="/modal.html" class="js-modal">open modal</a></p>
               </div>
